@@ -9,8 +9,9 @@
 packing script
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-uck\-remaster\-pack\-iso [iso\-file\-name.iso] [remaster\-dir] [\-g|\-\-generate\-md5]
-[\-a|\-\-arch=x86,x86_64,ia64,ppc] [\-d|\-\-description=CD_description]
+uck\-remaster\-pack\-iso [iso\-file\-name.iso] [remaster\-dir] [\-h|\-\-hybrid]
+[\-g|\-\-generate\-md5] [\-a|\-\-arch=x86,x86_64,ia64,ppc]
+[\-d|\-\-description=CD_description]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBuck\-remaster\-pack\-iso\fR generates the new ISO image file compressing the
